# huira-gui

./: .gitignore  CMakeLists.txt
cmake/setup/: CustomVcpkgSetup.cmake
dependencies/: vcpkg.json
src/: main.cpp
